# tuffahi

./: .env.example  .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  index.html  miniplayer.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
electron/main/: auth-window.ts  discord.ts  index.ts  ipc-handlers.ts  token.ts
electron/preload/: index.ts
resources/icons/: icon.icns
src/: App.tsx  index.tsx  miniplayer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discord.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  token.rs
src-tauri/src/musickit/: mod.rs
src/components/: index.ts
src/components/Accessibility/: Accessibility.tsx
src/components/Album/: AlbumPage.tsx
src/components/AnimatedBackground/: AnimatedBackground.tsx
src/components/Browse/: ArtistPage.tsx  Browse.tsx  GenreBrowse.tsx  Search.tsx  SearchSuggestions.tsx
src/components/ContextMenu/: ContextMenu.tsx
src/components/Curators/: CuratorDetailPage.tsx  CuratorsPage.tsx
src/components/Equalizer/: Equalizer.tsx
src/components/ErrorBoundary/: ErrorBoundary.tsx
src/components/ForYou/: ForYou.tsx
src/hooks/: useMediaKeys.ts  useMusicKit.ts  useNotifications.ts  usePlayer.ts  useTrayEvents.ts
src/services/: api.ts  cache.ts  discord.ts  index.ts  keyboard.ts  logger.ts  storage.ts  themes.ts
src/stores/: library.ts  musickit.ts  player.ts  ratings.ts
src/styles/: global.css
src/types/: electron.d.ts  index.ts  musickit.d.ts
(+28 files in other folders)
