[package]
name = "apple-music-client"
version = "0.1.0"
description = "Cross-platform Apple Music client"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "apple_music_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
base64 = "0.22"
chrono = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
directories = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
